# jira-cli

./: .dockerignore  .gitignore  Dockerfile  README.md  ai-jira-cli.rb  entrypoint.sh  jira-cli.rb  pyproject.toml
.github/workflows/: release.yml
jira-ai-cli/: .gitignore  Dockerfile  README.md  jira-ai  jira-ai.bak  policy.yaml  pyproject.toml
jira-ai-cli/jira_ai_cli/: action_orchestrator.py  cli.py  config_manager.py  github_integration.py  jira_integration.py
jira-ai-cli/jira_ai_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
jira-ai-cli/tests/: test_action_orchestrator.py  test_cli.py  test_github_integration.py  test_jira_integration.py  test_llm_integration.py  test_policy_engine.py
jira_ai_cli/: action_orchestrator.py  cli.py  jira_integration.py  llm_integration.py  policy_engine.py  ux.py
jira_cli/: action_orchestrator.py  cli.py  config_manager.py  github_integration.py  jira_integration.py  llm_integration.py  ux.py
tests/: test_action_orchestrator.py  test_cli.py  test_config_manager.py  test_jira_integration.py  test_ux.py
