[project]
name = "jira-cli"
version = "1.1.0"
description = "LLM-Assisted Jira CLI"
dependencies = [
    "click",
    "requests",
    "jira",
    "PyYAML",
    "halo",
    "litellm",
]

[tool.setuptools]
packages = ["jira_cli"]

[project.scripts]
jira-cli = "jira_cli.cli:cli"

[project.optional-dependencies]
dev = ["pyinstaller"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
